# get-ssl-skill

./: .gitignore  LICENSE  README.md  README_EN.md
get-ssl-ali/: SKILL.md  pyproject.toml
get-ssl-ali/config/: config.example.yaml
get-ssl-ali/scripts/aliyun_ssl_manager/: __init__.py  __main__.py  cli.py  config.py  models.py
get-ssl-ali/scripts/aliyun_ssl_manager/api/: __init__.py  acme_client.py  cas_client.py  dns_client.py
get-ssl-ali/scripts/aliyun_ssl_manager/core/: cert_manager.py  deployer.py  validator.py
get-ssl-ali/scripts/aliyun_ssl_manager/utils/: logger.py  retry.py
